# tasklist/tasklist-backend/src/main/java/io/miranum/platform/tasklist/domain/TaskWithSchemaRef.java
@@ -5,6 +5,8 @@ import lombok.Data;
 
 @Data
 public class TaskWithSchemaRef {
-    private final Task task;
-    private final String schemaRef;
+  private final Task task;
+  private final String schemaRef;
+  private final boolean cancelable;
+  private final TaskSchemaType taskSchemaType;
 }
